# Qt_Calculate_Qt-

./: CMakeLists.txt  README.md  widget.cpp  widget.h  widget.ui
